Use Boolean.valueOf